--- a/playbook_deploy.yml
+++ b/playbook_deploy.yml
@@ -9,7 +9,7 @@
         dest: ~/prod.env
 
     - name: run container
-      docker_container:
+      community.docker.docker_container:
         name: some-redmine
         recreate: yes
         image: redmine
