--- a/playbook_deploy.yml
+++ b/playbook_deploy.yml
@@ -8,6 +8,15 @@
         src: templates/prod.env.js2
         dest: ~/prod.env
 
+    - name: Install packages for
+      ansible.builtin.apt:
+        name: python3-pip
+        update_cache: yes
+
+    - name: Install Docker Module for Python
+      ansible.builtin.pip:
+        name: docker
+
     - name: run container
       community.docker.docker_container:
         name: some-redmine
